--- a/index.html
+++ b/index.html
@@ -13,35 +13,27 @@
 
 <picture>
   <source media="(min-width: 650px)" srcset="MenuTextures/SiegeXY.png">
-  <img  style="position: absolute; top: CENTER; left: CENTER;" vsrc="MenuTextures/SiegeXY.png">
+  <img  style="position: absolute; top: 40%;  left: 48%;margin-top: -220px;margin-left: -180px;width: 440px;height: 360px;" vsrc="MenuTextures/SiegeXY.png">
 </picture>
 <picture>
   <source media="(min-width: 650px)" srcset="MenuTextures/bulletHole1.png">
-  <img  style="position: absolute; top:350px; left:130px;" width="150" height="150" vsrc="MenuTextures/bulletHole1.png">
+  <img  style="position: absolute; top:70%; left:90%; width="150" height="150"" vsrc="bulletHole1.png">
 </picture>
 <picture>
   <source media="(min-width: 650px)" srcset="MenuTextures/bulletHole1.png">
-  <img  style="position: absolute; top:400px; left:65px;" vsrc="MenuTextures/bulletHole1.png">
+  <img  style="position: absolute; top:30%; left:10%; width="150" height="150"" vsrc="MenuTextures/bulletHole1.png">
 </picture>
 <picture>
   <source media="(min-width: 650px)" srcset="MenuTextures/bulletHole1.png">
-  <img  style="position: absolute; top:100px; left:65px;" vsrc="bulletHole1.png">
+  <img  style="position: absolute; top:30%; left:10%; width="150" height="150"" vsrc="MenuTextures/bulletHole1.png">
 </picture>
 <picture>
   <source media="(min-width: 650px)" srcset="MenuTextures/bulletHole1.png">
-  <img  style="position: absolute; top:420px; left:810px;" vsrc="MenuTextures/bulletHole1.png">
+  <img  style="position: absolute; top:30%; left:10%; width="150" height="150"" vsrc="MenuTextures/bulletHole1.png">
 </picture>
 <picture>
   <source media="(min-width: 650px)" srcset="MenuTextures/bulletHole1.png">
-  <img  style="position: absolute; top:200px; left:890px;" vsrc="MenuTextures/bulletHole1.png">
-</picture>
-<picture>
-  <source media="(min-width: 650px)" srcset="MenuTextures/bulletHole1.png">
-  <img  style="position: absolute; top:300px; left:1000px;" width="150" height="150" vsrc="MenuTextures/bulletHole1.png">
-</picture>
-<picture>
-  <source media="(min-width: 650px)" srcset="MenuTextures/bulletHole1.png">
-  <img  style="position: absolute; top:0px; left:1120px;" vsrc="MenuTextures/bulletHole1.png">
+  <img  style="position: absolute; top:30%; left:10%; width="150" height="150"" vsrc="MenuTextures/bulletHole1.png">
 </picture>
 
     <style>
@@ -49,13 +41,11 @@
 
 
 .dropdown {
-  position: absolute; top:428px; left:538px;
-  width: 100%;
 }
 
 .dropdown-content {
   display: none;
-  position: absolute;
+  position: absolute; top: 84%;  left: 50%;margin-top: -10%;margin-left: -10%;width: 20%;
   background-color: #606060;
   z-index: 1;
   text-align: CENTER;
@@ -166,7 +156,7 @@ span.psw {
 
 
    <div class="dropdown">
-  <button class="button">Play Game</button>
+  <button class="button" style="position: absolute; top: 84%;  left: 50%;margin-top: -10%;margin-left: -10%;width: 20%;">Play Game </button>
   <div class="dropdown-content">
     <a href="Casual.html">Casual</a>
     <a href="#">Ranked</a>
@@ -184,9 +174,9 @@ span.psw {
     </form>
 
 
-    <button style="position: absolute; top:528px; left:538px;" class="button">Credits</button>
+    <button style="position: absolute; top: 100%;  left: 50%;margin-top: -10%;margin-left: -10%;width: 20%;" class="button">Credits</button>
 
-   <button onclick="document.getElementById('id01').style.display='block'" style="position: absolute; top:478px; left:538px;">Settings</button>
+   <button onclick="document.getElementById('id01').style.display='block'" style="position: absolute; top: 92%;  left: 50%;margin-top: -10%;margin-left: -10%;width: 20%;">Settings</button>
 
 <div id="id01" class="modal">
 
