--- a/Casual.html
+++ b/Casual.html
@@ -11,9 +11,17 @@
     <style> body {padding: 0; margin: 0;} canvas {vertical-align: top;} </style>
    </head>
 
+   <canvas id="my-canvas"></canvas>
 
 
-  <body>
+   <script
+   var can = document.getElementById("my-canvas");
+
+   can.style.width = window.innerWidth + "px";
+   can.style.height = window.innerHeight + "px";>
+   </script>
+
+  <body background= "MenuTextures/SelectScreen.jpg">
 
      <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
