--- a/index.html
+++ b/index.html
@@ -10,32 +10,20 @@
     <script src="sketch.js" type="text/javascript"></script>
 
     <style> body {padding: 0; margin: 0;} canvas {vertical-align: top;} </style>
+<canvas id="my-canvas"></canvas>
 
+
+<script
+var can = document.getElementById("my-canvas");
+
+can.style.width = window.innerWidth + "px";
+can.style.height = window.innerHeight + "px";>
+</script>
 <picture>
   <source media="(min-width: 650px)" srcset="MenuTextures/SiegeXY.png">
   <img  style="position: absolute; top: 40%;  left: 48%;margin-top: -220px;margin-left: -180px;width: 440px;height: 360px;" vsrc="MenuTextures/SiegeXY.png">
 </picture>
-<picture>
-  <source media="(min-width: 650px)" srcset="MenuTextures/bulletHole1.png">
-  <img  style="position: absolute; top:70%; left:90%; width="150" height="150"" vsrc="bulletHole1.png">
-</picture>
-<picture>
-  <source media="(min-width: 650px)" srcset="MenuTextures/bulletHole1.png">
-  <img  style="position: absolute; top:30%; left:10%; width="150" height="150"" vsrc="MenuTextures/bulletHole1.png">
-</picture>
-<picture>
-  <source media="(min-width: 650px)" srcset="MenuTextures/bulletHole1.png">
-  <img  style="position: absolute; top:30%; left:10%; width="150" height="150"" vsrc="MenuTextures/bulletHole1.png">
-</picture>
-<picture>
-  <source media="(min-width: 650px)" srcset="MenuTextures/bulletHole1.png">
-  <img  style="position: absolute; top:30%; left:10%; width="150" height="150"" vsrc="MenuTextures/bulletHole1.png">
-</picture>
-<picture>
-  <source media="(min-width: 650px)" srcset="MenuTextures/bulletHole1.png">
-  <img  style="position: absolute; top:30%; left:10%; width="150" height="150"" vsrc="MenuTextures/bulletHole1.png">
-</picture>
-
+ <body background= "MenuTextures/Background.jpg">
     <style>
     body {font-family: Arial, Helvetica, sans-serif;}
 
