--- a/Casual.html
+++ b/Casual.html
@@ -11,17 +11,66 @@
     <script src="libraries/p5.dom.js" type="text/javascript"></script>
     <script src="libraries/p5.sound.js" type="text/javascript"></script>
     <script src="CharacterSelect.js" type="text/javascript"></script>
-    <style> body {padding: 0; margin: 0;} canvas {vertical-align: top;} </style>
+    <style>
+    body {
+      font-family: Arial, Helvetica, sans-serif;
+    }
+
+    /* Set a style for all buttons */
+    button {
+      background-color: #404040;
+      color: white;
+      padding: 14px 20px;
+      margin: 8px 0;
+      border: none;
+      cursor: pointer;
+      width: 20%;
+      position: absolute;
+    }
+
+    #myVideo {
+      position: fixed;
+      right: 0;
+      bottom: 0;
+      min-width: 100%;
+      min-height: 100%;
+    }
+
+    button:hover {
+      opacity: 0.8;
+    }
+
+    progress:hover {
+
+    }
+
+    text:hover {
+    }
+
+    }
+    body {
+        padding: 0; margin: 0;
+    }
+    canvas {
+        vertical-align: top;
+      }
+    h1, h2, h3, p {
+        text-align: center;
+        font-size: 60;
+        color: white;
+        font-family: "Arial";
+    }
+    </style>
    </head>
 
    <canvas id="my-canvas"></canvas>
 
-   <!-- <video autoplay muted loop id="myVideo">
+   <video autoplay muted loop id="myVideo">
      <source src="MenuTextures/SelectScreenMoving.mp4" type="video/mp4">
      Your browser does not support HTML5 video.
    </video>
 
-   <script
+   <script>
    var video = document.getElementById("myVideo");
    var btn = document.getElementById("myBtn");
 
@@ -30,58 +79,22 @@
        video.play();
      } else {
        video.pause();
-     }>
-     </script> -->
+     }
+     </script>
 
   <body background= "MenuTextures/SelectScreenMoving.mp4">
 
 
 
      <meta name="viewport" content="width=device-width, initial-scale=1">
-<style>
-body {font-family: Arial, Helvetica, sans-serif;}
 
-/* Set a style for all buttons */
-button {
-  background-color: #404040;
-  color: white;
-  padding: 14px 20px;
-  margin: 8px 0;
-  border: none;
-  cursor: pointer;
-  width: 20%;
-  position: absolute;
-}
-
-#myVideo {
-  position: fixed;
-  right: 0;
-  bottom: 0;
-  min-width: 100%;
-  min-height: 100%;
-}
-
-button:hover {
-  opacity: 0.8;
-}
-
-progress:hover {
-
-}
-
-text:hover {
-}
-
-}
-</style>
 
 <button onclick = song.play()></button>
 
 
 
 
-
-<p style="position: absolute; top: 20%;  left: 50%; margin-top: -30px; height: 60px; color: white; font-size:60px">Choose Your Operator</p>
+<h1>Choose Your Operator</h1>
 
 <a href="game.html">
   <img srcset="OperatorImages/Tortue.png"  style="position: absolute; top: 38%;  left: 50%;margin-top: -40px;margin-left: -40px;width: 80px;height: 80px;" width="75" height="75" vsrc="Tortue.png">
