--- a/game.html
+++ b/game.html
@@ -17,7 +17,9 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
-body {font-family: Arial, Helvetica, sans-serif;}
+body {
+  font-family: Arial, Helvetica, sans-serif;
+}
 
 /* Full-width input fields */
 input[type=text], input[type=password] {
