--- a/TrainStation.html
+++ b/TrainStation.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <title>SiegeXY</title>
+
+    <script src="SiegeXY.js" type="text/javascript"></script>
   </head>
-   <body>
+  <body>
   </body>
 </html>
