--- a/TrainStation.html
+++ b/TrainStation.html
@@ -4,6 +4,7 @@
     <title>SiegeXY</title>
 
     <script src="SiegeXY.js" type="text/javascript"></script>
+    <script src="TrainStation.js" type="text/javascript"></script>
   </head>
   <body>
   </body>
