--- a/Casual.html
+++ b/Casual.html
@@ -3,13 +3,13 @@
   <head>
     <meta charset="UTF-8">
     <title>Siege XY</title>
-    <script src="libraries/p5.js" type="text/javascript"></script>
-    <script function preload(){
-    var song;
-    song = loadSound("Songs/CabinetMan.mp3");
-    }></script>
-    <script src="libraries/p5.dom.js" type="text/javascript"></script>
-    <script src="libraries/p5.sound.js" type="text/javascript"></script>
+    <script>
+      function preload(){
+        var song;
+        song = loadSound("Songs/CabinetMan.mp3");
+      }
+    </script>
+
     <script src="CharacterSelect.js" type="text/javascript"></script>
     <style>
     body {
