--- a/game.html
+++ b/game.html
@@ -4,10 +4,8 @@
   <head>
     <meta charset="UTF-8">
     <title>The Typing Siege2</title>
-    <script src="libraries/p5.js" type="text/javascript"></script>
+    <script src="p5.js" type="text/javascript"></script>
 
-    <script src="libraries/p5.dom.js" type="text/javascript"></script>
-    <script src="libraries/p5.sound.js" type="text/javascript"></script>
     <script src="SiegeXY.js" type="text/javascript"></script>
 
     <style> body {padding: 0; margin: 0;} canvas {vertical-align: top;} </style>
