--- a/index.html
+++ b/index.html
@@ -4,8 +4,6 @@
     <meta charset="UTF-8">
     <title>Siege XY</title>
 
-    <script src="sketch.js" type="text/javascript"></script>
-
     <style> body {padding: 0; margin: 0;} canvas {vertical-align: top;} </style>
 <canvas id="my-canvas"></canvas>
 
@@ -51,7 +49,7 @@ can.style.height = window.innerHeight + "px";>
 
 .dropdown:hover .dropdown-content {display: block;}
 
-.dropdown:hover .dropbtn {background-color: #404040;;}
+.dropdown:hover .dropbtn {background-color: #404040;}
 
 /* Full-width input fields */
 input[type=text], input[type=password] {
