--- a/TrainStation.html
+++ b/TrainStation.html
@@ -3,9 +3,24 @@
   <head>
     <title>SiegeXY</title>
 
-    <script src="SiegeXY.js" type="text/javascript"></script>
     <script src="TrainStation.js" type="text/javascript"></script>
+
+    <img id="layer1" src="GameTextures/Train Station12.png" alt="Layer 1">
+    <img id="layer2" src="GameTextures/TrainStation Layer2.png" alt="Layer 2">
+    <img id="Blackout" src="GameTextures/Op1.png">
+    <img id="Tortue" src="GameTextures/Op2.png">
+    <img id="PewDiePie" src="GameTextures/Op3.png">
+
+    <style>
+      html, body {
+        overflow: hidden;
+        background-color: #4f4f4f;
+      }
+    </style>
   </head>
   <body>
+    <canvas id="cnvGame" width="6000" height="6000">
+
+    </canvas>
   </body>
 </html>
