--- a/TrainStation.html
+++ b/TrainStation.html
@@ -3,7 +3,7 @@
   <head>
     <title>SiegeXY</title>
 
-    <script src="TrainStation.js" type="text/javascript"></script>
+
 
 
     <img id="Blackout" src="GameTextures/Op1.png">
@@ -24,9 +24,11 @@
     </style>
   </head>
   <body>
-    <div id="divGame">
+    <p id="divGame">
       <img id="layer1" src="GameTextures/Train Station18.png" alt="Layer 1">
       <img id="layer2" src="GameTextures/TrainStation Layer2 1.png" alt="Layer 2">
-    </div>
+    </p>
   </body>
+
+  <script src="TrainStation.js" type="text/javascript"></script>
 </html>
