--- a/TrainStation.html
+++ b/TrainStation.html
@@ -6,9 +6,7 @@
 
 
 
-    <img id="Blackout" src="GameTextures/Op1.png">
-    <img id="Tortue" src="GameTextures/Op2.png">
-    <img id="PewDiePie" src="GameTextures/Op3.png">
+
 
     <style>
       html, body {
@@ -19,7 +17,7 @@
         position: absolute;
       }
       #Blackout, #Tortue, #PewDiePie {
-        position: relative;
+        position: absolute; top: 50%; left: 50%;
       }
     </style>
   </head>
@@ -28,6 +26,9 @@
       <img id="layer1" src="GameTextures/Train Station18.png" alt="Layer 1">
       <img id="layer2" src="GameTextures/TrainStation Layer2 1.png" alt="Layer 2">
     </p>
+    <img id="Blackout" src="GameTextures/Op1.png">
+    <img id="Tortue" src="GameTextures/Op2.png">
+    <img id="PewDiePie" src="GameTextures/Op3.png">
   </body>
 
   <script src="TrainStation.js" type="text/javascript"></script>
