Added secondary weapon and primary

--- a/TrainStation.html
+++ b/TrainStation.html
@@ -20,7 +20,7 @@
       <img id="layer1" src="GameTextures/Train Station32.png" alt="Layer 1">
       <img id="layer2" src="GameTextures/TrainStation Layer2 1.png" alt="Layer 2">
     </p>
-    <img id="PewDiePie" src="GameTextures/Op4.png">
+    <img id="PewDiePie" src="GameTextures/Op4Primary.png">
   </body>
 
   <script src="TrainStation.js" type="text/javascript"></script>
