--- a/TrainStation.html
+++ b/TrainStation.html
@@ -11,16 +11,17 @@
         position: absolute;
       }
       #Blackout, #Tortue, #PewDiePie {
-        position: absolute; top: 50%; left: 50%;
+        position: absolute; margin-top: -50px; margin-left: -37.5px; width: 75px; height: 100px; top:50%; left:50%;
       }
     </style>
   </head>
   <body>
     <p id="divGame">
       <img id="layer1" src="GameTextures/Train Station32.png" alt="Layer 1">
-      <img id="layer2" src="GameTextures/TrainStation Layer2 1.png" alt="Layer 2">
+      <img id="layer2"src="GameTextures/TrainStation Layer2 1.png" alt="Layer 2">
     </p>
     <img id="PewDiePie" src="GameTextures/Op4Primary.png">
+    <progress id="Healthbar" value="100" max="100" style="position: absolute; margin-top: -10px; margin-left: -75px; width: 150px; height: 20px; top:90%; left:50%; color: green;">Health</progress>
   </body>
 
   <script src="TrainStation.js" type="text/javascript"></script>
