--- a/TrainStation.html
+++ b/TrainStation.html
@@ -14,6 +14,9 @@
       #Blackout, #Tortue, #PewDiePie {
         position: absolute; margin-top: -50px; margin-left: -37.5px; top:50%; left:50%;
       }
+      #minimap{
+       position: absolute; margin-top: -10px; margin-left: -75px; width: 150px; height: 150px; top:75%; left:93%;
+      }
     </style>
   </head>
   <body>
@@ -21,6 +24,7 @@
       <img id="layer1" src="GameTextures/Train Station32.png" alt="Layer 1">
       <img id="layer2"src="GameTextures/TrainStation Layer2 1.png" alt="Layer 2">
     </p>
+    <img id="minimap" src="GameTextures/Train Station32.png" alt="Minimap">
     <img id="PewDiePie" src="GameTextures/Op4Primary.png">
     <progress id="Healthbar" value="100" max="100" style="position: absolute; margin-top: -10px; margin-left: -75px; width: 150px; height: 20px; top:5%; left:10%; background-color: #4CAF50;">Health</progress>
   </body>
