--- a/TrainStation.html
+++ b/TrainStation.html
@@ -11,7 +11,7 @@
         position: absolute;
       }
       #Blackout, #Tortue, #PewDiePie {
-        position: absolute; margin-top: -50px; margin-left: -37.5px; width: 75px; height: 100px; top:50%; left:50%;
+        position: absolute; margin-top: -50px; margin-left: -37.5px; top:50%; left:50%;
       }
     </style>
   </head>
