--- a/TrainStation.html
+++ b/TrainStation.html
@@ -12,10 +12,31 @@
         position: absolute;
       }
       #Blackout, #Tortue, #PewDiePie {
-        position: absolute; margin-top: -50px; margin-left: -37.5px; top:50%; left:50%;
+        position: absolute;
+        margin-top: -50px;
+        margin-left: -37.5px;
+        top:50%;
+        left:50%;
       }
       #minimap{
-       position: absolute; margin-top: -10px; margin-left: -75px; width: 150px; height: 150px; top:75%; left:93%;
+       position: absolute;
+       margin-top: -10px;
+       margin-left: -75px;
+       width: 150px;
+       height: 150px;
+       top:75%;
+       left:93%;
+       opacity:0.7;
+      }
+      #Healthbar{
+      position: absolute;
+      margin-top: -10px;
+      margin-left: -75px;
+      width: 150px;
+      height: 20px;
+      top:5%;
+      left:10%;
+      background-color: #90EE90;
       }
     </style>
   </head>
@@ -26,7 +47,7 @@
     </p>
     <img id="minimap" src="GameTextures/Train Station32.png" alt="Minimap">
     <img id="PewDiePie" src="GameTextures/Op4Primary.png">
-    <progress id="Healthbar" value="100" max="100" style="position: absolute; margin-top: -10px; margin-left: -75px; width: 150px; height: 20px; top:5%; left:10%; background-color: #4CAF50;">Health</progress>
+    <progress id="Healthbar" value="100" max="100">Health</progress>
   </body>
 
   <script src="TrainStation.js" type="text/javascript"></script>
