--- a/Casual.html
+++ b/Casual.html
@@ -3,12 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <title>Siege XY</title>
-    <script>
-      function preload(){
-        var song;
-        song = loadSound("Songs/CabinetMan.mp3");
-      }
-    </script>
+
 
     <script src="CharacterSelect.js" type="text/javascript"></script>
     <style>
@@ -63,6 +58,7 @@
     </style>
    </head>
 
+
    <canvas id="my-canvas"></canvas>
 
    <video autoplay muted loop id="myVideo">
@@ -82,7 +78,7 @@
      }
      </script>
 
-  <body background= "MenuTextures/SelectScreenMoving.mp4">
+  // <body background= <p>Choose Your Operator</p>>
 
     <video autoplay muted loop id="myVideo">
       <source src="MenuTextures/SelectScreenMoving.mp4" type="video/mp4">
@@ -103,14 +99,6 @@
 
      <meta name="viewport" content="width=device-width, initial-scale=1">
 
-
-
-<button onclick = song.play()></button>
-
-
-
-
-
 <!-- <video background autoplay muted loop id="myVideo">
   <source src="MenuTextures/SelectScreenMoving.mp4" type="video/mp4">
   Your browser does not support HTML5 video.
@@ -126,9 +114,8 @@ function myFunction() {
   } else {
     video.pause();
   }>
-  </script> -->
 
-<h1>Choose Your Operator</h1>
+  </script> -->
 
 <a href="TrainStation.html">
   <img srcset="OperatorImages/Tortue.png"  style="position: absolute; top: 38%;  left: 50%;margin-top: -40px;margin-left: -40px;width: 80px;height: 80px;" width="75" height="75" vsrc="Tortue.png">
