--- a/TrainStation.html
+++ b/TrainStation.html
@@ -18,6 +18,11 @@
         top:50%;
         left:50%;
       }
+      #Terrorist{
+        position: absolute;
+        top:300px;
+        left:900px;
+      }
       #minimap{
        position: absolute;
        margin-top: -10px;
@@ -45,6 +50,7 @@
       <img id="layer1" src="GameTextures/Train Station32.png" alt="Layer 1">
       <img id="layer2"src="GameTextures/TrainStation Layer2 1.png" alt="Layer 2">
     </p>
+    <img id="Terrorist1" src="GameTextures/Terrorist1.png" alt="Terrorist1">
     <img id="minimap" src="GameTextures/Train Station32.png" alt="Minimap">
     <img id="PewDiePie" src="GameTextures/Op4Primary.png">
     <progress id="Healthbar" value="100" max="100">Health</progress>
