--- a/TrainStation.html
+++ b/TrainStation.html
@@ -19,9 +19,7 @@
         left:50%;
       }
       #Terrorist{
-        position: absolute;
-        top:300px;
-        left:900px;
+       position: absolute;
       }
       #minimap{
        position: absolute;
@@ -49,8 +47,8 @@
     <p id="divGame">
       <img id="layer1" src="GameTextures/Train Station32.png" alt="Layer 1">
       <img id="layer2"src="GameTextures/TrainStation Layer2 1.png" alt="Layer 2">
+      <img id="terrorist1" src="GameTextures/Terrorist1.png" alt="Terrorist1">
     </p>
-    <img id="Terrorist1" src="GameTextures/Terrorist1.png" alt="Terrorist1">
     <img id="minimap" src="GameTextures/Train Station32.png" alt="Minimap">
     <img id="PewDiePie" src="GameTextures/Op4Primary.png">
     <progress id="Healthbar" value="100" max="100">Health</progress>
