--- a/TrainStation.html
+++ b/TrainStation.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>SiegeXY</title>
+      <script src="libraries/p5.js" type="text/javascript"></script>
     <style>
       html, body {
         overflow: hidden;
