--- a/TrainStation.html
+++ b/TrainStation.html
@@ -3,6 +3,7 @@
   <head>
     <title>SiegeXY</title>
     <style>
+    *{cursor: url(Cursors/CrosshairNormal.cur),default;}
       html, body {
         overflow: hidden;
         background-color: #4f4f4f;
@@ -58,7 +59,7 @@
       height: 31px;
       top:15%;
       left:23%;
-       font-family: arial;
+      font-family: arial;
       }
     </style>
   </head>
