Added music autoplay

--- a/index.html
+++ b/index.html
@@ -170,9 +170,15 @@ span.psw {
 
 
     <div class="container">
-    <audio autoplay loop controls>
-  <source src="Songs/Music2.mp3" type="audio/mpeg">
-</audio>
+      <iframe src="Songs/Music2.mp3" allow="autoplay" loop controls
+      style="position: absolute;
+      top: 80%;
+      left: 50%;
+      margin-top: -10%;
+      margin-left: -10%;
+      width: 20%;"
+      id="iframeAudio">
+</iframe>
     </div>
 
 
