--- a/Casual.html
+++ b/Casual.html
@@ -11,6 +11,7 @@
       font-family: Arial, Helvetica, sans-serif;
     }
 
+
     /* Set a style for all buttons */
     button {
       background-color: #404040;
@@ -58,6 +59,15 @@
     </style>
    </head>
 
+   <iframe id="Music"src="SoundEffects/Background Music Game.mp3" allow="autoplay" loop controls
+   style="position: absolute;
+   top: 80%;
+   left: 50%;
+   margin-top: -10%;
+   margin-left: -10%;
+   width: 20%;"
+   id="iframeAudio">
+   </iframe>
 
    <canvas id="my-canvas"></canvas>
 
@@ -77,6 +87,7 @@
        video.pause();
      }
      </script>
+
 
   // <body background= <p>Choose Your Operator</p>>
 
