--- a/Casual.html
+++ b/Casual.html
@@ -1,6 +1,29 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <style>
+div#load_screen{
+	background: #000;
+	opacity: 1;
+	position: fixed;
+    z-index:10;
+	top: 0px;
+	width: 100%;
+	height: 1600px;
+}
+div#load_screen > div#loading{
+	color:#FFF;
+	width:120px;
+	height:24px;
+	margin: 300px auto;
+}
+</style>
+<script>
+window.addEventListener("load", function(){
+	var load_screen = document.getElementById("load_screen");
+	document.body.removeChild(load_screen);
+});
+</script>
     <meta charset="UTF-8">
     <title>Siege XY</title>
 
@@ -58,7 +81,7 @@
     }
     </style>
    </head>
-
+   <div id="load_screen"><div id="loading">Loading</div></div>
    <iframe id="Music"src="SoundEffects/Background Music Game.mp3" allow="autoplay" loop controls
    style="position: absolute;
    top: 80%;
