--- a/index.html
+++ b/index.html
@@ -18,7 +18,15 @@ can.style.height = window.innerHeight + "px";>
 </script>
 <picture>
   <source media="(min-width: 650px)" srcset="MenuTextures/SiegeXY.png">
-  <img  style="position: absolute; top: 40%;  left: 48%;margin-top: -220px;margin-left: -180px;width: 440px;height: 360px;" vsrc="MenuTextures/SiegeXY.png">
+  <img  style="
+  position: absolute;
+  top: 40%;
+  left: 48%;
+  margin-top: -220px;
+  margin-left: -180px;
+  width: 440px;
+  height: 360px;
+  "vsrc="MenuTextures/SiegeXY.png">
 </picture>
  <body background = "MenuTextures/Background.jpg">
     <style>
@@ -31,7 +39,12 @@ can.style.height = window.innerHeight + "px";>
 
 .dropdown-content {
   display: none;
-  position: absolute; top: 84%;  left: 50%;margin-top: -10%;margin-left: -10%;width: 20%;
+  position: absolute;
+   top: 84%;
+   left: 50%;
+   margin-top: -10%;
+   margin-left: -10%;
+   width: 20%;
   background-color: #606060;
   z-index: 1;
   text-align: CENTER;
@@ -142,7 +155,15 @@ span.psw {
 
 
    <div class="dropdown">
-  <button class="button" style="position: absolute; top: 84%;  left: 50%;margin-top: -10%;margin-left: -10%;width: 20%;">Play Game </button>
+  <button class="button"
+  style="
+   position: absolute;
+   top: 84%;
+   left: 50%;
+   margin-top: -10%;
+   margin-left: -10%;
+   width: 20%;
+   ">Play Game </button>
   <div class="dropdown-content">
     <a href="Casual.html">Casual</a>
     <a href="#">Ranked</a>
@@ -160,9 +181,22 @@ span.psw {
     </form>
 
 
-    <button style="position: absolute; top: 100%;  left: 50%;margin-top: -10%;margin-left: -10%;width: 20%;" class="button">Credits</button>
+    <button
+    style="position: absolute;
+    top: 100%;
+    left: 50%;
+    margin-top: -10%;
+    margin-left: -10%;
+    width: 20%;
+    "class="button">Credits</button>
 
-   <button onclick="document.getElementById('id01').style.display='block'" style="position: absolute; top: 92%;  left: 50%;margin-top: -10%;margin-left: -10%;width: 20%;">Settings</button>
+   <button onclick="document.getElementById('id01').style.display='block'"
+   style="position: absolute;
+   top: 92%;  left: 50%;
+   margin-top: -10%;
+   margin-left: -10%;
+   width: 20%;
+   ">Settings</button>
 
 <div id="id01" class="modal">
 
