--- a/Casual.html
+++ b/Casual.html
@@ -55,6 +55,7 @@ window.addEventListener("load", function(){
       min-height: 100%;
     }
 
+
     button:hover {
       opacity: 0.8;
     }
@@ -82,14 +83,9 @@ window.addEventListener("load", function(){
     </style>
    </head>
    <div id="load_screen"><div id="loading">Loading</div></div>
-   <iframe id="Music"src="SoundEffects/Background Music Game.mp3" allow="autoplay" loop controls
-   style="position: absolute;
-   top: 80%;
-   left: 50%;
-   margin-top: -10%;
-   margin-left: -10%;
-   width: 20%;"
-   id="iframeAudio">
+
+
+   <iframe id="Music" src="SoundEffects/Background Music Game.mp3" allow="autoplay" loop controls>
    </iframe>
 
    <canvas id="my-canvas"></canvas>
