--- a/Casual.html
+++ b/Casual.html
@@ -155,17 +155,17 @@ function myFunction() {
   <img srcset="OperatorImages/Pewdiepie.png" style="position: absolute; top: 38%;  left: 57%;margin-top: -40px;margin-left: -40px;width: 80px;height: 80px;" vsrc="Pewdiepie.png">
 </a>
 <a href="TrainStation.html">
-  <img srcset="OperatorImages/OperatorNotDone.png" style="position: absolute; top: 52%;  left: 57%;margin-top: -40px;margin-left: -40px;width: 80px;height: 80px;" vsrc="OperatorNotDone.png">
+  <img srcset="OperatorImages/Outlast.png" style="position: absolute; top: 52%;  left: 57%;margin-top: -40px;margin-left: -40px;width: 80px;height: 80px;" vsrc="Outlast.png">
 </a>
 <a href="TrainStation.html">
-  <img srcset="OperatorImages/OperatorNotDone.png" style="position: absolute; top: 52%;  left: 50%;margin-top: -40px;margin-left: -40px;width: 80px;height: 80px;" width="75" height="75" vsrc="OperatorNotDone.png">
+  <img srcset="OperatorImages/Glaze.png" style="position: absolute; top: 52%;  left: 50%;margin-top: -40px;margin-left: -40px;width: 80px;height: 80px;" width="75" height="75" vsrc="Glaze.png">
 </a>
 <a href="TrainStation.html">
   <img srcset="OperatorImages/OperatorNotDone.png" style="position: absolute; top: 66%;  left: 50%;margin-top: -40px;margin-left: -40px;width: 80px;height: 80px;" width="75" height="75" vsrc="OperatorNotDone.png">
 </a>
 
 <a href="TrainStation.html">
-  <img srcset="OperatorImages/OperatorNotDone.png" style="position: absolute; top: 52%;  left: 43%;margin-top: -40px;margin-left: -40px;width: 80px;height: 80px;" vsrc="OperatorNotDone.png">
+  <img srcset="OperatorImages/Cloud9Benis.png" style="position: absolute; top: 52%;  left: 43%;margin-top: -40px;margin-left: -40px;width: 80px;height: 80px;" vsrc="Cloud9Benis.png">
 </a>
 <a href="TrainStation.html">
   <img srcset="OperatorImages/OperatorNotDone.png" style="position: absolute; top: 66%;  left: 57%;margin-top: -40px;margin-left: -40px;width: 80px;height: 80px;" vsrc="OperatorNotDone.png">
