Fixed draging image problem

--- a/TrainStation.html
+++ b/TrainStation.html
@@ -34,6 +34,7 @@ div#load_screen > div#loading{
 
       #layer1, #layer2 {
         position: absolute;
+        pointer-events: none;
       }
       #Blackout, #Tortue, #PewDiePie {
         position: absolute;
