Fixed dragging problem

--- a/TrainStation.html
+++ b/TrainStation.html
@@ -38,6 +38,7 @@ div#load_screen > div#loading{
       }
       #Blackout, #Tortue, #PewDiePie {
         position: absolute;
+        pointer-events: none;
         margin-top: -50px;
         margin-left: -37.5px;
         top:50%;
@@ -45,9 +46,11 @@ div#load_screen > div#loading{
       }
       #Terrorist{
        position: absolute;
+       pointer-events: none;
       }
       #minimap{
        position: absolute;
+       pointer-events: none;
        margin-top: -10px;
        margin-left: -75px;
        width: 150px;
@@ -59,6 +62,7 @@ div#load_screen > div#loading{
       #Healthbar{
       background-color: #90EE90;
       position: absolute;
+      pointer-events: none;
       margin-top: -70.5px;
       margin-left: -15.5px;
       width: 141px;
@@ -68,6 +72,7 @@ div#load_screen > div#loading{
       }
       #AmmoCounter{
       position: absolute;
+      pointer-events: none;
       margin-top: -70.5px;
       margin-left: -15.5px;
       width: 141px;
@@ -77,6 +82,7 @@ div#load_screen > div#loading{
       }
       #AmmoAmmount{
       position: absolute;
+      pointer-events: none;
       margin-top: -70.5px;
       margin-left: -15.5px;
       width: 141px;
