Did more fixing

--- a/Casual.html
+++ b/Casual.html
@@ -55,6 +55,9 @@ window.addEventListener("load", function(){
       min-height: 100%;
     }
 
+    Tortue:hover{
+    opacity: 0.8;
+    }
 
     button:hover {
       opacity: 0.8;
@@ -147,7 +150,7 @@ function myFunction() {
 
   </script> -->
 
-<a href="TrainStation.html">
+<a id="Tortue" href="TrainStation.html">
   <img srcset="OperatorImages/Tortue.png"  style="position: absolute; top: 38%;  left: 50%;margin-top: -40px;margin-left: -40px;width: 80px;height: 80px;" width="75" height="75" vsrc="Tortue.png">
 </a>
 
