--- a/TrainStation.html
+++ b/TrainStation.html
@@ -35,22 +35,28 @@ div#load_screen > div#loading{
       #layer1, #layer2 {
         position: absolute;
         pointer-events: none;
+        user-select:none;
       }
       #Blackout, #Tortue, #PewDiePie {
         position: absolute;
         pointer-events: none;
+        user-select:none;
         margin-top: -50px;
         margin-left: -37.5px;
         top:50%;
         left:50%;
       }
-      #Terrorist{
+      #terrorist1{
        position: absolute;
        pointer-events: none;
+       user-select:none;
+       top: 300px;
+       left: 90px;
       }
       #minimap{
        position: absolute;
        pointer-events: none;
+       user-select:none;
        margin-top: -10px;
        margin-left: -75px;
        width: 150px;
@@ -63,6 +69,7 @@ div#load_screen > div#loading{
       background-color: #90EE90;
       position: absolute;
       pointer-events: none;
+      user-select:none;
       margin-top: -70.5px;
       margin-left: -15.5px;
       width: 141px;
@@ -73,6 +80,7 @@ div#load_screen > div#loading{
       #AmmoCounter{
       position: absolute;
       pointer-events: none;
+      user-select:none;
       margin-top: -70.5px;
       margin-left: -15.5px;
       width: 141px;
@@ -83,6 +91,7 @@ div#load_screen > div#loading{
       #AmmoAmmount{
       position: absolute;
       pointer-events: none;
+      user-select:none;
       margin-top: -70.5px;
       margin-left: -15.5px;
       width: 141px;
