--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@ can.style.height = window.innerHeight + "px";>
   <source media="(min-width: 650px)" srcset="MenuTextures/SiegeXY.png">
   <img  style="
   position: absolute;
+  pointer-events: none;
   top: 40%;
   left: 48%;
   margin-top: -220px;
@@ -28,7 +29,7 @@ can.style.height = window.innerHeight + "px";>
   height: 360px;
   "vsrc="MenuTextures/SiegeXY.png">
 </picture>
- <body background = "MenuTextures/Background.jpg">
+ <body background = "MenuTextures/Background.jpg" >
     <style>
     body {font-family: Arial, Helvetica, sans-serif;}
 
