No more terrorist

--- a/TrainStation.html
+++ b/TrainStation.html
@@ -46,13 +46,11 @@ div#load_screen > div#loading{
         top:50%;
         left:50%;
       }
-      #terrorist1{
+      /* #terrorist1{
        position: absolute;
        pointer-events: none;
        user-select:none;
-       top: 300px;
-       left: 90px;
-      }
+      } */
       #minimap{
        position: absolute;
        pointer-events: none;
@@ -110,7 +108,7 @@ div#load_screen > div#loading{
       <svg height="4000" width="4000">
         <polygon id="col1" class="collision" points = "38 100, 38 260, 140 270, 220 335, 20 560, 165 712, 100 810, 35 805, 40 1010, 325 1015, 330 1180, 0 1180, 0 1230" style="fill:lime;stroke:purple;stroke-width:1;"/>
       </svg>
-      <img id="terrorist1" src="GameTextures/Terrorist1.png" alt="Terrorist1">
+      <!-- <img id="terrorist1" src="GameTextures/Terrorist1.png" alt="Terrorist1"> -->
     </p>
     <img id="AmmoCounter" src="GameTextures/AmmoCounterLong.png">
     <p id="AmmoAmmount">11/99</p>
